chore: regenerate kafka-instance-sdk
